--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,36 +4,55 @@
 	"name": "C# (.NET)",
 	"build": {
 		"dockerfile": "Dockerfile",
-		"args": { 
+		"args": {
 			// Update 'VARIANT' to pick a .NET Core version: 3.1, 5.0, 6.0
 			// Append -bullseye or -focal to pin to an OS version.
-			"VARIANT": "6.0",
+			"VARIANT": "7.0",
 			// Options
 			"NODE_VERSION": "lts/*"
 		}
 	},
+	"features": {
+		"ghcr.io/devcontainers/features/powershell": {
+			"version": "latest"
+		},
+		"ghcr.io/devcontainers/features/dotnet": {
+			"version": "7.0",
+			"additionalVersions": "6.0",
+			"runtimeOnly": false
+		},
+		"ghcr.io/jlaundry/devcontainer-features/azure-functions-core-tools": {
 
-	// Set *default* container specific settings.json values on container create.
-	"settings": {
-		"dotnetAcquisitionExtension.existingDotnetPath": [
-			{
-				"extensionId": "ms-azuretools.vscode-bicep",
-				"path": "/usr/share/dotnet/dotnet"
-			}
-		]
+		},
+		"ghcr.io/devcontainers/features/docker-in-docker": {
+
+		}
 	},
-
-	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": [
-		"ms-dotnettools.csharp",
-		"ms-azuretools.vscode-bicep",
-		"cschleiden.vscode-github-actions",
-		"ms-azure-devops.azure-pipelines"
-	],
-
+	"customizations": {
+		"vscode": {
+			// Set *default* container specific settings.json values on container create.
+			"settings": {
+				"dotnetAcquisitionExtension.existingDotnetPath": [
+					{
+						"extensionId": "ms-azuretools.vscode-bicep",
+						"path": "/usr/share/dotnet/dotnet"
+					}
+				]
+			},
+			// Add the IDs of extensions you want installed when the container is created.
+			"extensions": [
+				"ms-dotnettools.csharp",
+				"ms-azuretools.vscode-azurefunctions",
+				"ms-azuretools.vscode-bicep",
+				"cschleiden.vscode-github-actions",
+				"ms-azure-devops.azure-pipelines",
+				"github.vscode-github-actions",
+				"ms-vscode.powershell"
+			]
+		}
+	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [5000, 5001],
-
 	// [Optional] To reuse of your local HTTPS dev cert:
 	//
 	// 1. Export it locally using this command:
@@ -41,7 +60,7 @@
 	//        dotnet dev-certs https --trust; dotnet dev-certs https -ep "$env:USERPROFILE/.aspnet/https/aspnetapp.pfx" -p "SecurePwdGoesHere"
 	//    * macOS/Linux terminal:
 	//        dotnet dev-certs https --trust; dotnet dev-certs https -ep "${HOME}/.aspnet/https/aspnetapp.pfx" -p "SecurePwdGoesHere"
-	// 
+	//
 	// 2. Uncomment these 'remoteEnv' lines:
 	//    "remoteEnv": {
 	// 	      "ASPNETCORE_Kestrel__Certificates__Default__Password": "SecurePwdGoesHere",
@@ -56,13 +75,8 @@
 	//
 	//    * If only using Remote - Containers with a local container, uncomment this line instead:
 	//      "mounts": [ "source=${env:HOME}${env:USERPROFILE}/.aspnet/https,target=/home/vscode/.aspnet/https,type=bind" ],
-
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "dotnet restore",
-
+	"postCreateCommand": "dotnet dev-certs https --trust",
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode",
-	"features": {
-		"powershell": "latest"
-	}
+	"remoteUser": "vscode"
 }
