--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
 		"args": {
 			// Update 'VARIANT' to pick a .NET Core version: 3.1, 5.0, 6.0
 			// Append -bullseye or -focal to pin to an OS version.
-			"VARIANT": "7.0",
+			"VARIANT": "8.0-bookworm",
 			// Options
 			"NODE_VERSION": "lts/*"
 		}
@@ -47,7 +47,9 @@
 				"cschleiden.vscode-github-actions",
 				"ms-azure-devops.azure-pipelines",
 				"github.vscode-github-actions",
-				"ms-vscode.powershell"
+				"ms-vscode.powershell",
+				"ms-dotnettools.csdevkit",
+				"ms-dotnettools.vscodeintellicode-csharp"
 			]
 		}
 	},
